some decent configs

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -8,10 +8,6 @@ monitor=HDMI-A-2, 2560x1440@144, 2560x1440, 1
 # Dual monitor example on G15 Strix
 # eDP-1 is the built in monitor while DP-1 is external
 # Both monitors here are at 1440 and 165Hz
-# DP-1 is on the left and  eDP-1 is on the right
-#monitor=DP-1,2560x1440@165,0x0,1
-#monitor=eDP-1,2560x1440@165,2560x0,1.25
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
@@ -23,6 +19,11 @@ exec-once = waybar
 #exec-once = mako
 
 exec-once = swww init
+
+exec-once swww img ~/wallpapers-for-days/raven2cz_wallpapers/00016-wallhaven-r28dm7.jpg -o DP-1
+exec-once swww img ~/wallpapers-for-days/primeagen_anime/charging3.png -o HDMI-A-1
+exec-once swww img ~/wallpapers-for-days/lambda_wallpapers/anime/deity.jpg -o DP-2
+exec-once swww img ~/wallpapers-for-days/lambda_wallpapers/anime/wallhaven-q63vdr.jpg -o HDMI-A-2
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = ~/.config/HyprV/hyprv_util setbg
@@ -49,7 +50,7 @@ general {
 
     gaps_in = 5
     gaps_out = 10
-    border_size = 2
+    border_size = 4
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.active_border=rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
@@ -65,9 +66,14 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = yes
-    blur_size = 7
-    blur_passes = 4
+    multisample_edges = true
+    active_opacity = 1.0
+    inactive_opacity = 1.0
+    fullscreen_opacity = 1.0
+
+    blur = no
+    blur_size = 2
+    blur_passes = 2
     blur_new_optimizations = on
 
     blurls = lockscreen
