fixed monitor configuration

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,16 +1,12 @@
-# Setup monitors
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-1, 2560x1440@60, 0x0, 1
-monitor=DP-1, 2560x1440@60, 2560x0, 1
+# topleft
+monitor=DP-1, 2560x1440@60, 0x0, 1 
+#topright
+monitor=HDMI-A-2, 2560x1440@60, 2560x0, 1 
+# bottomleft
 monitor=DP-2, 2560x1440@144, 0x1440, 1
-monitor=HDMI-A-2, 2560x1440@144, 2560x1440, 1
-#exec-once = ~/.config/hypr/start-way-displays.sh
-# Dual monitor example on G15 Strix
-# eDP-1 is the built in monitor while DP-1 is external
-# Both monitors here are at 1440 and 165Hz
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+#bottomright
+monitor=HDMI-A-1, 2560x1440@144, 2560x1440, 1
 
-# Execute your favorite apps at launch
 #exec-once = ~/.config/hypr/xdg-portal-hyprland
 #exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 #exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
