--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,28 +1,21 @@
-# topleft
-monitor=DP-1, 2560x1440@60, 0x0, 1 
-#topright
-monitor=HDMI-A-2, 2560x1440@60, 2560x0, 1 
-# bottomleft
-monitor=DP-2, 2560x1440@144, 0x1440, 1
-#bottomright
 monitor=HDMI-A-1, 2560x1440@144, 2560x1440, 1
-
-#exec-once = ~/.config/hypr/xdg-portal-hyprland
-#exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+monitor=DP-1, 2560x1440@60, 0x0, 1
+monitor=DP-2, 2560x1440@144, 0x1440, 1
+monitor=HDMI-A-2, 2560x1440@60, 2560x0, 1
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = waybar
-#exec-once = mako
+exec-once = mako
 
 exec-once = swww init
 
-exec-once swww img ~/wallpapers-for-days/raven2cz_wallpapers/00016-wallhaven-r28dm7.jpg -o DP-1
-exec-once swww img ~/wallpapers-for-days/primeagen_anime/charging3.png -o HDMI-A-1
-exec-once swww img ~/wallpapers-for-days/lambda_wallpapers/anime/deity.jpg -o DP-2
-exec-once swww img ~/wallpapers-for-days/lambda_wallpapers/anime/wallhaven-q63vdr.jpg -o HDMI-A-2
-exec-once = blueman-applet
+exec = swww img ~/wallpapers-for-days/raven2cz_wallpapers/00016-wallhaven-r28dm7.jpg -o DP-1
+exec = swww img ~/wallpapers-for-days/primeagen_anime/charging3.png -o HDMI-A-1
+exec = swww img ~/wallpapers-for-days/lambda_wallpapers/anime/deity.jpg -o DP-2
+exec = swww img ~/wallpapers-for-days/lambda_wallpapers/anime/wallhaven-q63vdr.jpg -o HDMI-A-2
 exec-once = nm-applet --indicator
-exec-once = ~/.config/HyprV/hyprv_util setbg
+
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -103,29 +96,20 @@ master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
 
+}
 
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 
 # Example windowrule v1
-#windowrule = float, ^(kitty)$
 windowrule = float,^(pavucontrol)$
-windowrule = float,^(blueman-manager)$
 windowrule = float,^(nm-connection-editor)$
 windowrule = float,^(chromium)$
-windowrule = float,^(thunar)$
 windowrule = float, title:^(btop)$
 windowrule = float, title:^(update-sys)$
 
 # Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # rules below would make the specific app transparent
-windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
-windowrulev2 = animation popin,class:^(kitty)$,title:^(update-sys)$
-windowrulev2 = animation popin,class:^(thunar)$
-windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 windowrulev2 = opacity 0.8 0.8,class:^(VSCodium)$
 windowrulev2 = animation popin,class:^(chromium)$
 windowrulev2 = move cursor -3% -105%,class:^(wofi)$
@@ -134,20 +118,17 @@ windowrulev2 = noanim,class:^(wofi)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 #$mainmod = SUPER
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = SUPER, T, exec, alacritty  #open the terminal
 bind = SUPER_SHIFT, Q, killactive # close the active window
 #bind = $mainMod, L, exec, swaylock, # Lock the screen
 #bind = $mainMod, M, exec, wlogout --protocol layer-shell, # show the logout window
 #bind = SUPER, SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
-#bind = $mainMod, E, exec, thunar, # Show the graphical file browser
 #bind = $mainMod, V, togglefloating, # Allow a window to float
 bind = SUPER, S, exec, rofi -show drun # Show the graphical app launcher
 #bind = $mainMod, P, pseudo, # dwindle
 #bind = $mainMod, J, togglesplit, # dwindle
 #bind = $mainMod, S, exec, grim -t jpeg -q 10 -g "$(slurp)" - | swappy -f - # take a screenshot
 
-# Move focus with mainMod + arrow keys
 bind = SUPER, n, movefocus, l
 bind = SUPER, i, movefocus, r
 bind = SUPER, u, movefocus, u
@@ -157,28 +138,3 @@ bind = SUPER_SHIFT, n, movewindow, l
 bind = SUPER_SHIFT, i, movewindow, r
 bind = SUPER_SHIFT, u, movewindow, u
 bind = SUPER_SHIFT, e, movewindow, d
-# Switch workspaces with mainMod + [0-9]
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-# bind = $mainMod SHIFT, 1, movetoworkspace, 1
-# bind = $mainMod SHIFT, 2, movetoworkspace, 2
-# bind = $mainMod SHIFT, 3, movetoworkspace, 3
-# bind = $mainMod SHIFT, 4, movetoworkspace, 4
-# bind = $mainMod SHIFT, 5, movetoworkspace, 5
-# bind = $mainMod SHIFT, 6, movetoworkspace, 6
-# bind = $mainMod SHIFT, 7, movetoworkspace, 7
-# bind = $mainMod SHIFT, 8, movetoworkspace, 8
-# bind = $mainMod SHIFT, 9, movetoworkspace, 9
-# bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Scroll through existing workspaces with mainMod + scroll
-#bind = SUPER, mouse_down, workspace, e+1
-#bind = SUPER, mouse_up, workspace, e-1
-
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-# bindm = $mainMod, mouse:272, movewindow
-# bindm = $mainMod, mouse:273, resizewindow
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
