--- a/hyprland.conf
+++ b/hyprland.conf
@@ -117,18 +117,19 @@ windowrulev2 = noanim,class:^(wofi)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-#$mainmod = SUPER
+#bind = $mainMod, L, exec, swaylock, # Lock the screen
+
+#bind = $mainMod, P, pseudo, # dwindle
+#bind = $mainMod, S, exec, grim -t jpeg -q 10 -g "$(slurp)" - | swappy -f - # take a screenshot
+#bind = SUPER, X, exec, wlogout --protocol layer-shell, # show the logout window
+
+
+bind = SUPER_SHIFT, X, exit, # Exit Hyprland all together no (force quit Hyprland)
+bind = SUPER, S, togglesplit, # dwindle
+bind = SUPER, F, togglefloating, # Allow a window to float
+bind = SUPER, L, exec, wofi --show drun # Show the graphical app launcher
 bind = SUPER, T, exec, alacritty  #open the terminal
 bind = SUPER_SHIFT, Q, killactive # close the active window
-#bind = $mainMod, L, exec, swaylock, # Lock the screen
-#bind = $mainMod, M, exec, wlogout --protocol layer-shell, # show the logout window
-#bind = SUPER, SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
-#bind = $mainMod, V, togglefloating, # Allow a window to float
-bind = SUPER, S, exec, rofi -show drun # Show the graphical app launcher
-#bind = $mainMod, P, pseudo, # dwindle
-#bind = $mainMod, J, togglesplit, # dwindle
-#bind = $mainMod, S, exec, grim -t jpeg -q 10 -g "$(slurp)" - | swappy -f - # take a screenshot
-
 bind = SUPER, n, movefocus, l
 bind = SUPER, i, movefocus, r
 bind = SUPER, u, movefocus, u
