kitty as the new default terminal. minor fixes to get things working again

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,10 +2,12 @@ monitor=HDMI-A-1, 2560x1440@144, 2560x1440, 1
 monitor=DP-1, 2560x1440@60, 0x0, 1
 monitor=DP-2, 2560x1440@144, 0x1440, 1
 monitor=HDMI-A-2, 2560x1440@60, 2560x0, 1
+
+exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = waybar
+#exec-once = waybar
 exec-once = mako
 
 exec-once = swww init
@@ -128,7 +130,7 @@ bind = SUPER_SHIFT, X, exit, # Exit Hyprland all together no (force quit Hyprlan
 bind = SUPER, S, togglesplit, # dwindle
 bind = SUPER, F, togglefloating, # Allow a window to float
 bind = SUPER, L, exec, wofi --show drun # Show the graphical app launcher
-bind = SUPER, T, exec, alacritty  #open the terminal
+bind = SUPER, T, exec, kitty #open the terminal
 bind = SUPER_SHIFT, Q, killactive # close the active window
 bind = SUPER, n, movefocus, l
 bind = SUPER, i, movefocus, r
