--- a/hyprland.conf
+++ b/hyprland.conf
@@ -41,12 +41,20 @@ general {
 
     gaps_in = 5
     gaps_out = 10
-    border_size = 4
-    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border=rgb(cdd6f4)
-    col.inactive_border = rgba(595959aa)
+    border_size = 6
+    no_border_on_floating = false
+    gaps_in = 4
+    gaps_out = 3
 
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(d9b959aa)
+    cursor_inactive_timeout = 0
     layout = dwindle
+    no_cursor_warps = false
+    no_focus_fallback = false
+    resize_on_border = true
+    extend_border_grab_area = 10
+    hover_icon_on_border = true
 }
 
 misc {
@@ -61,15 +69,14 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
     fullscreen_opacity = 1.0
-
-    blur = no
+    blur = yes
     blur_size = 2
     blur_passes = 2
-    blur_new_optimizations = on
+    blur_new_optimizations = true
+    blur_ignore_opacity = true
+    blur_xray = true
 
-    blurls = lockscreen
-
-    drop_shadow = yes
+    drop_shadow = no
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
@@ -115,8 +122,7 @@ windowrule = float, title:^(update-sys)$
 windowrulev2 = opacity 0.8 0.8,class:^(VSCodium)$
 windowrulev2 = animation popin,class:^(chromium)$
 windowrulev2 = move cursor -3% -105%,class:^(wofi)$
-windowrulev2 = noanim,class:^(wofi)$
-
+windowrulev2 = noanim, class:^(wofi)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 #bind = $mainMod, L, exec, swaylock, # Lock the screen
