got wofi to work in xray mode

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -70,8 +70,8 @@ decoration {
     inactive_opacity = 1.0
     fullscreen_opacity = 1.0
     blur = yes
-    blur_size = 2
-    blur_passes = 2
+    blur_size = 0
+    blur_passes = 0
     blur_new_optimizations = true
     blur_ignore_opacity = true
     blur_xray = true
@@ -123,7 +123,7 @@ windowrulev2 = opacity 0.8 0.8,class:^(VSCodium)$
 windowrulev2 = animation popin,class:^(chromium)$
 windowrulev2 = move cursor -3% -105%,class:^(wofi)$
 windowrulev2 = noanim, class:^(wofi)$
-
+windowrulev2 = opacity 0.7, class:^(wofi)$
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 #bind = $mainMod, L, exec, swaylock, # Lock the screen
 
