--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,8 +1,5 @@
-monitor=HDMI-A-1, 2560x1440@144, 2560x1440, 1
-monitor=DP-1, 2560x1440@60, 0x0, 1
-monitor=DP-2, 2560x1440@144, 0x1440, 1
-monitor=HDMI-A-2, 2560x1440@60, 2560x0, 1
-
+source=~/.config/hypr/themes/catpuccin-latte.conf
+source=~/.config/hypr/monitors.conf
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -18,36 +15,28 @@ exec = swww img ~/wallpapers-for-days/lambda_wallpapers/anime/deity.jpg -o DP-2
 exec = swww img ~/wallpapers-for-days/lambda_wallpapers/anime/wallhaven-q63vdr.jpg -o HDMI-A-2
 exec-once = nm-applet --indicator
 
-
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
     kb_variant =
     kb_model =
     kb_options =
     kb_rules =
-
     follow_mouse = 0
-
     touchpad {
         natural_scroll = no
     }
-
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 5
     gaps_out = 10
     border_size = 6
     no_border_on_floating = false
     gaps_in = 4
     gaps_out = 3
-
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(d9b959aa)
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # col.inactive_border = rgba(d9b959aa)
     cursor_inactive_timeout = 0
     layout = dwindle
     no_cursor_warps = false
@@ -62,16 +51,14 @@ misc {
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 5
     multisample_edges = true
     active_opacity = 1.0
     inactive_opacity = 1.0
     fullscreen_opacity = 1.0
     blur = yes
-    blur_size = 0
-    blur_passes = 0
+    blur_size = 2
+    blur_passes = 2
     blur_new_optimizations = true
     blur_ignore_opacity = true
     blur_xray = true
@@ -79,15 +66,12 @@ decoration {
     drop_shadow = no
     shadow_range = 4
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+   # col.shadow = rgba(1a1a1aee)
 }
 
 animations {
     enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
     bezier = myBezier, 0.10, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier, slide
     animation = windowsOut, 1, 7, myBezier, slide
     animation = border, 1, 10, default
@@ -96,42 +80,30 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
-
 }
 
-
-
-# Example windowrule v1
 windowrule = float,^(pavucontrol)$
 windowrule = float,^(nm-connection-editor)$
 windowrule = float,^(chromium)$
 windowrule = float, title:^(btop)$
 windowrule = float, title:^(update-sys)$
 
-# Example windowrule v2
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# rules below would make the specific app transparent
 windowrulev2 = opacity 0.8 0.8,class:^(VSCodium)$
 windowrulev2 = animation popin,class:^(chromium)$
 windowrulev2 = move cursor -3% -105%,class:^(wofi)$
 windowrulev2 = noanim, class:^(wofi)$
 windowrulev2 = opacity 0.7, class:^(wofi)$
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+
 #bind = $mainMod, L, exec, swaylock, # Lock the screen
-
 #bind = $mainMod, P, pseudo, # dwindle
-#bind = $mainMod, S, exec, grim -t jpeg -q 10 -g "$(slurp)" - | swappy -f - # take a screenshot
+#bind = $mainMod, S, exec, grim -t jpeg -q 10 -g "$(surp)" - | swappy -f - # take a screenshot
 #bind = SUPER, X, exec, wlogout --protocol layer-shell, # show the logout window
-
-
 bind = SUPER_SHIFT, X, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = SUPER, S, togglesplit, # dwindle
 bind = SUPER, F, togglefloating, # Allow a window to float
