--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,6 +1,5 @@
 source=~/.config/hypr/themes/catpuccin-latte.conf
 source=~/.config/hypr/monitors.conf
-exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -100,9 +99,9 @@ windowrulev2 = move cursor -3% -105%,class:^(wofi)$
 windowrulev2 = noanim, class:^(wofi)$
 windowrulev2 = opacity 0.7, class:^(wofi)$
 
+windowrulev2 = center, class:^(wofi)$
 #bind = $mainMod, L, exec, swaylock, # Lock the screen
 #bind = $mainMod, P, pseudo, # dwindle
-#bind = $mainMod, S, exec, grim -t jpeg -q 10 -g "$(surp)" - | swappy -f - # take a screenshot
 #bind = SUPER, X, exec, wlogout --protocol layer-shell, # show the logout window
 bind = SUPER_SHIFT, X, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = SUPER, S, togglesplit, # dwindle
